--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 .idea/
 *.pyc
+afrinic.db.gz
+apnic.db.inet6num.gz
+apnic.db.inetnum.gz
+arin.db
+delegated-lacnic-extended-latest
 ripe.db.inetnum.gz
 ripe.db.inet6num.gz
 env/
