--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,9 @@
 .git/
 env/
 bin/
+databases/
+TODO
+query_db.sh
 .*
 **/.DS_STORE
 **/*.md
@@ -8,11 +11,3 @@ bin/
 **/*.pyc
 Dockerfile
 docker-compose.yml
-# databases
-afrinic.db.gz
-apnic.db.inet6num.gz
-apnic.db.inetnum.gz
-arin.db
-delegated-lacnic-extended-latest
-ripe.db.inetnum.gz
-ripe.db.inet6num.gz
