--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,6 @@
 version: '2'
 services:
-  ripe:
-    entrypoint: /ripe/create_db.py
+  network_info:
+    entrypoint: /app/create_db.py
     volumes:
-      - .:/ripe
+      - .:/app
