--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "3.7"
 services:
   network_info:
     image: network_info
@@ -7,11 +7,11 @@ services:
     command: -c postgres://network_info:network_info@db:5432/network_info
     volumes:
       - /etc/localtime:/etc/localtime:ro
-    links:
+    depends_on:
       - db
 
   db:
-    image: postgres:9-alpine
+    image: postgres:12-alpine
     environment:
       POSTGRES_DB: network_info
       POSTGRES_USER: network_info
@@ -22,4 +22,3 @@ services:
 volumes:
   pg_data:
     driver: local
-
