--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -2,5 +2,6 @@ version: "3.7"
 services:
   network_info:
     entrypoint: /app/create_db.py
+    command: -c postgres://network_info:network_info@db:5432/network_info -d
     volumes:
       - .:/app
