--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: network_info
     build:
       context: .
-    command: -c postgresql://network_info:network_info@db:5432/network_info
+    command: -c postgresql+psycopg://network_info:network_info@db:5432/network_info
     volumes:
       - /etc/localtime:/etc/localtime:ro
     depends_on:
